# QtResearch

./: .gitignore  README.md
basic/Containers/: README.md
basic/Pointer/: CMakeLists.txt  Printer.h  README.md  Test.cpp  Test.h  cat.cpp  main.cpp  toy.cpp
basic/Serialize/: README.md  json.cpp  xml.cpp
basic/Setting/: README.md
basic/Timer/: MyTimer.cpp  MyTimer.h  README.md  Watcher.cpp  Watcher.h  main.cpp
